# Elephant-Editor

./: CMakeLists.txt  README.md  makefile
includes/: LICENSE.md
src/: _main.cpp  board.cpp  board.h  globals.h  main.cpp  makefile  pix.build  properties.h  toolBar.cpp  toolBar.h  window.cpp  window.h
src/imageHandeling/: bitmap.h
src/ui/: button.cpp  button.h  container.cpp  container.h  includes.h  text.cpp  text.h  textBox.cpp  ui.h
src/widgets/: colourPicker.cpp  colourPicker.h  includes.h  toolBar.cpp  toolBar.h
